--- a/README
+++ b/README
@@ -1,8 +1,9 @@
-- 👋 Hi, I’m @Creatingcodeslike
-- 👀 I’m interested in ...
-- 🌱 I’m currently learning ...
+- 👋 Hi, I’m @Creatingcodeslike(Shivam)...
+- 👀 I’m interested in Software development...
+- 🌱 I’m currently learning nothing, just a beginner... ...
 - 💞️ I’m looking to collaborate on ...
-- 📫 How to reach me ...
+- 📫 How to reach me 
+Check out my Instagram account risingst.ar27...
 
 <!---
 Creatingcodeslike/Creatingcodeslike is a ✨ special ✨ repository because its `README.md` (this file) appears on your GitHub profile.
